// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangesetNode renders ExternalChangeset 1`] = `
<ExternalChangesetNode
  campaignUpdates="[Subject]"
  history="[History]"
  isLightTheme={true}
  location="[Location path=/campaigns]"
  node={
    Object {
      "__typename": "ExternalChangeset",
    }
  }
  viewerCanAdminister={false}
/>
`;

exports[`ChangesetNode renders HiddenExternalChangeset 1`] = `
<HiddenExternalChangesetNode
  campaignUpdates="[Subject]"
  history="[History]"
  isLightTheme={true}
  location="[Location path=/campaigns]"
  node={
    Object {
      "__typename": "HiddenExternalChangeset",
    }
  }
  viewerCanAdminister={false}
/>
`;
